# docs/api-spec.yml
@@ -42,7 +42,16 @@ paths:
                     properties:
                       total:
                         type: number
-                        example: 10           
+                        example: 100
+                      page:
+                        type: number
+                        example: 2
+                      perPage:
+                        type: number
+                        example: 10                                
+                      lastPage:
+                        type: number
+                        example: 1
 
   /api/v1/auth/login:
     post:
@@ -205,6 +214,27 @@ paths:
       tags:
         - Drinks
       summary: Drinks
+      parameters:
+        - in: query
+          name: search
+          schema:
+            type: string
+          description: A term that the user wants to search
+        - in: query
+          name: page-size
+          schema:
+            type: number
+          description: The size of the returned page
+        - in: query
+          name: sort-by
+          schema:
+            type: number
+          description: Field to order the items
+        - in: query
+          name: order
+          schema:
+            type: number
+          description: Type of ordenation
       responses:
         200:
           description: Success
@@ -236,12 +266,21 @@ paths:
                         updated_at: 
                           type: string
                           example: '2023-12-16T02:17:49.951+00:00'
-                  meta:
+                  meta: 
                     type: object
                     properties:
                       total:
                         type: number
-                        example: 10
+                        example: 100
+                      page:
+                        type: number
+                        example: 2
+                      perPage:
+                        type: number
+                        example: 10                                
+                      lastPage:
+                        type: number
+                        example: 1
 
   /api/v1/category/{id}/drinks:
     get:
@@ -254,6 +293,21 @@ paths:
           schema:
             type: integer
           required: true
+        - in: query
+          name: page-size
+          schema:
+            type: number
+          description: The size of the returned page
+        - in: query
+          name: sort-by
+          schema:
+            type: number
+          description: Field to order the items
+        - in: query
+          name: order
+          schema:
+            type: number
+          description: Type of ordenation
       responses:
         200:
           description: Success
@@ -285,12 +339,21 @@ paths:
                         updated_at: 
                           type: string
                           example: '2023-12-16T02:17:49.951+00:00'
-                  meta:
+                  meta: 
                     type: object
                     properties:
                       total:
                         type: number
-                        example: 10
+                        example: 100
+                      page:
+                        type: number
+                        example: 2
+                      perPage:
+                        type: number
+                        example: 10                                
+                      lastPage:
+                        type: number
+                        example: 1
   
   /api/v1/favorites/{id}:
     delete:
@@ -333,6 +396,22 @@ paths:
       security:
         - BearerAuth: []
       summary: Favorites drinks of the logged user
+      parameters:
+        - in: query
+          name: page-size
+          schema:
+            type: number
+          description: The size of the returned page
+        - in: query
+          name: sort-by
+          schema:
+            type: number
+          description: Field to order the items
+        - in: query
+          name: order
+          schema:
+            type: number
+          description: Type of ordenation
       responses:
         200:
           description: Success
@@ -364,12 +443,21 @@ paths:
                         updated_at: 
                           type: string
                           example: '2023-12-16T02:17:49.951+00:00'
-                  meta:
+                  meta: 
                     type: object
                     properties:
                       total:
                         type: number
-                        example: 10
+                        example: 100
+                      page:
+                        type: number
+                        example: 2
+                      perPage:
+                        type: number
+                        example: 10                                
+                      lastPage:
+                        type: number
+                        example: 1
         401:
           description: Unauthorized
           content:
